Changes for 3.4.8rc1

New features:

Bug fixes:
........S. [ZBX-13452] fixed Elasticsearch history storage default value types (viktors)
..F....... [ZBX-12941] fixed checkbox overlay's position over the checkbox (miks)
..F....... [ZBX-13334] fixed translations of Widget parameters window (agriscenko)
A......... [ZBX-13307] field trapper_hosts changed to optional for trapper item.create (ashubin)
..F....... [ZBX-13307] fixed map scaling and position to the widget left side (ashubin)
A......... [ZBX-6118] fixed poor performance of changing an item on the template which linked with many hosts (Sasha)
..F....... [ZBX-13141] fixed invalid value for "Update interval" field in mass update form on submit was redirecting to items list (gcalenko)

--------------------------------------------------------------------------------
Changes for 3.4.7

3.4.7rc2 was released as 3.4.7 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.7rc2

Bug fixes:
.......P.. [ZBX-13403] allowed proxy to execute remote commands on agents using encrypted connection (gleb)
.......PS. [ZBX-13441] fixed crashes in case of failures (e.g. timeouts) during VMware hypervisor discovery (gleb)
A.F....... [ZBX-12607] fixed performance of map.get API method and map-related views (miks, Sasha)
....I..... [ZBX-13055] fixed compilation failure in Alpine Linux due to missing res_ninit() function (vso)

--------------------------------------------------------------------------------
Changes for 3.4.7rc1

Bug fixes:
........S. [ZBX-13194] fixed incorrect processing of zabbix[wcache,value,*] internal check (Sergejs)
.......PS. [ZBX-13060] added limitation for meaningless server reconnection attempts to incorrectly configured passive proxy (viktors)
...G...... [ZBX-13117] fixed vfs.dir.size with symbol links on Windows (MVekslers)