@@ -69,6 +69,15 @@ static int	DBpatch_3040006(void)
 	return SUCCEED;
 }
 
+static int	DBpatch_3040007(void)
+{
+#ifdef HAVE_MYSQL	/* MySQL automatically creates index and might not remove it on some conditions */
+	if (SUCCEED == DBindex_exists("problem", "c_problem_2"))
+		return DBdrop_index("problem", "c_problem_2");
+#endif
+	return SUCCEED;
+}
+
 #endif
 
 DBPATCH_START(3040)
@@ -82,5 +91,6 @@ DBPATCH_ADD(3040003, 0, 0)
 DBPATCH_ADD(3040004, 0, 0)
 DBPATCH_ADD(3040005, 0, 0)
 DBPATCH_ADD(3040006, 0, 0)
+DBPATCH_ADD(3040007, 0, 0)
 
 DBPATCH_END()
