@@ -3,10 +3,11 @@ Changes for 3.4.8rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-13498] added optional MySQL upgrade patch for "problem" table to drop redundant index after another index that can be used to enforce the foreign key constraint has been created (vso)
 ........S. [ZBX-13452] fixed Elasticsearch history storage default value types (viktors)
 ..F....... [ZBX-12941] fixed checkbox overlay's position over the checkbox (miks)
 ..F....... [ZBX-13334] fixed translations of Widget parameters window (agriscenko)
-A......... [ZBX-13307] field trapper_hosts changed to optional for trapper item.create (ashubin)
+A......... [ZBX-13248] changed field trapper_hosts to optional for trapper item.create (ashubin)
 ..F....... [ZBX-13307] fixed map scaling and position to the widget left side (ashubin)
 A......... [ZBX-6118] fixed poor performance of changing an item on the template which linked with many hosts (Sasha)
 ..F....... [ZBX-13141] fixed invalid value for "Update interval" field in mass update form on submit was redirecting to items list (gcalenko)
